# pinecone-serverless

./: .env.example  README.md  pyproject.toml  test_app.ipynb
app/: chain.py  server.py
