[tool.poetry]
name = "pinecone-wikipedia"
version = "0.1.0"
description = ""
authors = ["Lance Martin <lance@langchain.dev>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
pinecone-client = "3.0.0.dev8"
cohere = "^4.40"
openai = "^1.6.1"
python-dotenv = "^1.0.0"
langchain-community = ">=0.0.12,<0.1"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
